# goit-datascience-hw-02

./: create_tables.sql  main.py  pyproject.toml  scripts.sql  task1_pg.py
