[tool.poetry]
name = "hw02"
version = "0.1.0"
description = "data science homework 02"
authors = ["PavloTar <sg.pavlot@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
